Finished up the redirect page.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
                 <img src="./assets/camera.svg" draggable="false" />
                 <p> Redirect </p>
             </div>
+
+            <div class="mohit-redirect-body">
+                <div class="mohit-redirect-title"> Mohit Jain </div>
+                <p class="mohit-redirect-desc">
+                    This page simply serves as a redirect page for my websites. 
+                    I have created a portfolio website that describes my skills, expereiences, and provides contact info. 
+                    Furthermore, I have made a personal geospatial platform that goes further into my hobbies.
+                    You can navigate to both with the buttons below.
+                </p>
+
+                <a href="https://mohit-jain.com" class="mohit-redirect-mainLink">
+                    <img src="./assets/home.svg" />
+                    <span> My Website </span>
+                </a>
+                <a href="https://globe.mohit-jain.com" class="mohit-redirect-mainLink">
+                    <img src="./assets/globe.svg" />
+                    <span> My Globe </span>
+                </a>
+
+                <div class="mohit-redirect-credits">
+                    Credits To
+                    <span><a href="https://fontawesome.com/">Font Awesome</a></span> 
+                    For the Icons
+                </div>
+            </div>
         </div>
     </body>
 </html>
