--- a/404.html
+++ b/404.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0; url=./index.html" />
-    <title>Mohit Jain | Redirecting...</title>
-    <script type="text/javascript">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="icon" href="./assets/MKJ_Initials.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mohit Jain</title>
 
-        (function() {
-            window.location.replace("https://mohitjain49.github.io");
-        })();
-    </script>
-</head>
-<body></body>
+        <!-- THESE ARE THE LINKS FOR GOOGLE FONT STYLES. -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+        <!-- THESE ARE THE IMPORTED SCRIPT AND STYLE FILES FOR THE WEBSITE. -->
+        <link rel="stylesheet" href="./assets/style.css">
+    </head>
+    <body>
+        <div class="mohit-redirect">
+            <div class="mohit-redirect-top">
+                <img src="./assets/camera.svg" draggable="false" />
+                <p> Redirect </p>
+            </div>
+
+            <div class="mohit-redirect-body">
+                <div class="mohit-redirect-title"> Mohit Jain </div>
+                <p class="mohit-redirect-desc">
+                    This page simply serves as a redirect page for my websites. 
+                    I have created a portfolio website that describes my skills, expereiences, and provides contact info. 
+                    Furthermore, I have made a personal geospatial platform that goes further into my hobbies.
+                    You can navigate to both with the buttons below.
+                </p>
+
+                <a href="https://mohit-jain.com" class="mohit-redirect-mainLink">
+                    <img src="./assets/home.svg" />
+                    <span> My Website </span>
+                </a>
+                <a href="https://globe.mohit-jain.com" class="mohit-redirect-mainLink">
+                    <img src="./assets/globe.svg" />
+                    <span> My Globe </span>
+                </a>
+            </div>
+
+            <div class="mohit-redirect-bottom">
+
+            </div>
+        </div>
+    </body>
 </html>
