Making sure Index.html and 404.html match

--- a/404.html
+++ b/404.html
@@ -39,10 +39,12 @@
                     <img src="./assets/globe.svg" />
                     <span> My Globe </span>
                 </a>
-            </div>
 
-            <div class="mohit-redirect-bottom">
-
+                <div class="mohit-redirect-credits">
+                    Credits To
+                    <span><a href="https://fontawesome.com/">Font Awesome</a></span> 
+                    For the Icons
+                </div>
             </div>
         </div>
     </body>
