Updated Redirect Page with new icon.

--- a/404.html
+++ b/404.html
@@ -2,10 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" href="./assets/MKJ_Initials.png">
+        <link rel="icon" href="./Personal_Icon_Expanded_Transparent.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <title>Mohit Jain</title>
+        <meta name="description" content="My personal website extensively displays my skills as a software developer and the experience I have gathered through working with multiple companies.">
+        <meta name="author" content="Mohit Jain">
+        <meta property="og:site_name" content="Mohit Jain">
 
+        <!-- THESE ARE SOME OPEN GRAPH SETTINGS FOR THE WEBSITE.  -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://mohit-jain.com/">
+        <meta property="og:title" content="Mohit Jain's Website">
+        <meta property="og:description" content="My personal website extensively displays my skills as a software developer and the experience I have gathered through working with multiple companies.">
+        <meta property="og:image" content="https://mohit-jain.com/Personal_Icon_Expanded.png">
+
+        <!-- THESE ARE SOME OPEN GRAPH SETTINGS FOR THE WEBSITE MADE FOR TWITTER. -->
+        <meta property="twitter:card" content="summary">
+        <meta property="twitter:url" content="https://mohit-jain.com/">
+        <meta property="twitter:title" content="Mohit Jain's Website">
+        <meta property="twitter:description" content="My personal website extensively displays my skills as a software developer and the experience I have gathered through working with multiple companies.">
+        <meta property="twitter:image" content="https://mohit-jain.com/Personal_Icon_Expanded.png">
+        
         <!-- THESE ARE THE LINKS FOR GOOGLE FONT STYLES. -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
