--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../assets/Personal_Icon_Expanded_Transparent.png">
+    <link rel="icon" href="/src/assets/Personal_Icon_Expanded_Transparent.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Mohit Jain - Projects</title>
