Finished up this new redirect website.
Should work much better now.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/src/assets/Personal_Icon_Expanded_Transparent.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" crossorigin="anonymous" />
 
-    <title>Mohit Jain - Projects</title>
-    <meta name="description" content="">
+    <title>Mohit Jain</title>
+    <meta name="description" content="This is a simple webpage that will direct you to my portfolio at https://mohit-jain.com/.">
     <meta name="author" content="Mohit Jain">
     <meta property="og:site_name" content="Mohit Jain">
 
     <!-- THESE ARE SOME OPEN GRAPH SETTINGS FOR THE WEBSITE.  -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://projects.mohit-jain.com/">
-    <meta property="og:title" content="Mohit Jain - Projects">
-    <meta property="og:description" content="">
+    <meta property="og:url" content="https://redirect.mohit-jain.com/">
+    <meta property="og:title" content="Mohit Jain">
+    <meta property="og:description" content="This is a simple webpage that will direct you to my portfolio at https://mohit-jain.com/.">
     <meta property="og:image" content="https://mohit-jain.com/static-icons/Personal_Icon_Expanded.png">
 
     <!-- THESE ARE SOME OPEN GRAPH SETTINGS FOR THE WEBSITE MADE FOR TWITTER. -->
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:url" content="https://projects.mohit-jain.com/">
-    <meta property="twitter:title" content="Mohit Jain - Projects">
-    <meta property="twitter:description" content="">
+    <meta property="twitter:url" content="https://redirect.mohit-jain.com/">
+    <meta property="twitter:title" content="Mohit Jain">
+    <meta property="twitter:description" content="This is a simple webpage that will direct you to my portfolio at https://mohit-jain.com/.">
     <meta property="twitter:image" content="https://mohit-jain.com/static-icons/Personal_Icon_Expanded.png">
 
     <!-- THESE ARE THE LINKS FOR GOOGLE FONT STYLES. -->
